# IndexTTS-Studio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  path_validation.py  responses.py  routes_audio.py  routes_auth.py  routes_files.py  routes_jobs.py  routes_projects.py  routes_scripts.py  routes_speakers.py  routes_tts.py
app/core/: auth.py  config.py  container.py  exceptions.py  logger.py
app/domain/: models.py  schemas.py
app/infra/: indextts_adapter.py  storage.py
app/services/: audio_service.py  job_service.py  project_service.py  script_service.py  speaker_service.py  studio_table_service.py  tts_service.py
data/scripts/: episode1.csv  episode1.srt  episode1_overrides.json
docker/index-tts/: Dockerfile  bootstrap_models.py  entrypoint.sh
tests/: conftest.py  test_api.py  test_audio_api.py  test_audio_service.py  test_auth_api.py  test_config.py  test_inline_job_api.py  test_job_service.py  test_jobs_api.py  test_projects_api.py  test_remote_gradio_adapter.py  test_script_service.py  test_speaker_management_api.py  test_speaker_service.py  test_studio_table_api.py  test_tts_service.py  test_ui_support_api.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  components.tsx  lib.ts  styles.css  types.ts
web/src/pages/: JobsPage.tsx  LoginPage.tsx  ProjectsPage.tsx  RolesPage.tsx  StudioPage.tsx
